--- a/src/index.html
+++ b/src/index.html
@@ -10,31 +10,35 @@
 <body class="font-serif">
     <header class="">
         <div>
-            <h1 class=" h-20 text-3xl text-center flex justify-center items-center text-white bg-blue-700" >Weather Dashboard</h1>
+            <h1 class=" h-20 text-3xl font-bold text-center flex justify-center items-center text-white bg-blue-700 " >Weather Dashboard</h1>
         </div>
     </header>
-    <sidebar class="bg-black w-96 h-5/6">
-        <form action="" class="w-64">
-          <label class=" w-60 text-xl font-medium" for="cityname" >Enter a City Name</label><br>
-          <input class="w-60 border-solid border-2 border-black rounded" type="text" placeholder="Eg :Newyork, london, Tokyo" id="cityname" class="cityName" name="CityName"><br>
-          <button class="w-60 border-solid border-2 border-black rounded" type="button" value="submit" >Search</button><br>
-          <button class="w-60 border-solid border-2 border-black rounded" type="button" value="submit" >Use Current Location</button>
-        </form>
+    <sidebar class="bg-blue-200 h-dvh ">
+        <div class="flex justify-center items-center relative top-10">
+            <form action="" class="w-72 h-96 ">
+                <label class=" w-72 text-2xl font-bold my-10 py-9" for="cityname" >Enter a City Name</label><br>
+                <input class="buttons" type="text" placeholder="Eg :Newyork, london, Tokyo" id="cityname" class="cityName" name="CityName"><br>
+                <button class="buttons bg-blue-500 text-white text-xl font-medium" type="button" value="submit" >Search</button><br>
+                <div class="my-6 font-extrabold"><span>OR</span></div>
+                <button class="buttons bg-blue-500 text-white text-xl font-medium" type="button" value="submit" >Use Current Location</button>
+              </form>
+        </div>
       </sidebar>
     
-    <main>
-       <section class="bg-black">
-          <div class="locationDetails"></div>
+    <main class="w-9/12 h-dvh">
+       <section class=" w-12/12 h-72 bg-blue-200">
+          <div class="locationDetails h-64 ml-8 mt-4 rounded-lg bg-blue-700 w-11/12"></div>
        </section>
-       <article class="bg-black">
-          <h3>5-Day Forecast</h3>
-          <article></article>
-          <article></article>
-          <article></article>
-          <article></article>
-          <article></article>
-          <article></article>
-       </article>
+       <section class="h-96 bg-blue-200">
+          <div><h3 class="text-black font-bold bg-blue-200 ml-16 font-sans text-2xl">5-Day Forecast</h3></div>
+          <section class="allarticles flex flex-row ml-12 mt-6">
+            <article class="article1"></article>
+            <article class="article2"></article>
+            <article class="article3"></article>
+            <article class="article4"></article>
+            <article class="article5"></article>
+            </section>
+       </section>
     </main>
 </body>
 </html>
