--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
-    <script src="./index.js"></script>
+    <script src="./indexnew.js" defer></script>
 
 </head>
 <body class="font-serif">
@@ -18,23 +18,24 @@
         <div class="flex justify-center items-center relative top-10">
             <form action="" class="w-72 h-96 ">
                 <label class=" w-72 text-2xl font-bold my-10 py-9" for="cityname" >Enter a City Name</label><br>
-                <input class="buttons" type="text" placeholder="Eg :Newyork, london, Tokyo" id="cityname" class="cityName" name="CityName"><br>
-                <button class="buttons bg-blue-500 text-white text-xl font-medium" id="searchBtn" name="SearchInfo" type="button" value="submit" >Search</button><br>
+                <input id="cityname" class="buttons" type="text" placeholder="Eg :Newyork, london, Tokyo" ><br>
+                <button class="buttons bg-blue-500 text-white text-xl font-medium" id="searchBtn" type="button" value="submit" >Search</button><br>
                 <div class="my-6 font-extrabold"><span>OR</span></div>
-                <button class="buttons bg-blue-500 text-white text-xl font-medium" id="locationBtn" name="locationAccess" type="button" value="submit" >Use Current Location</button>
+                <button class="buttons bg-blue-500 text-white text-xl font-medium" id="locationBtn" type="button" value="submit" >Use Current Location</button>
               </form>
         </div>
       </sidebar>
     
     <main class="w-9/12 h-dvh">
-       <section class=" w-12/12 h-72 bg-blue-200">
-          <div class="locationDetails h-64 ml-8 mt-4 rounded-lg bg-blue-700 w-11/12">
-            <img src="" class="weather-img" alt="">
-            <div class="locationDate"></div>
-            <div class="temp"></div>
-            <div class="wind"></div>
-            <div class="humidity"></div>
-          </div>
+       <section class=" text-white w-12/12 h-72 bg-blue-200">
+          <section class="locationDetails h-64 ml-8 mt-4 rounded-lg bg-blue-700 w-11/12">
+            <img src="images/default-1.png" class="weather-img rounded-lg block" alt="">
+            <div class="locationDate">London (<span class="date">28-3-2024</span>)</div>
+            <div class="temp">Temprature : <span>0°</span></div>
+            <div class="wind">Wind : 2.33 M/S</div>
+            <div class="humidity">Humidity : 88%</div>
+            <img class="not-found hidden" src="images/404.png" alt="">
+          </section>
        </section>
        <section class="h-96 bg-blue-200">
           <div><h3 class="text-black font-bold bg-blue-200 ml-16 font-sans text-2xl">5-Day Forecast</h3></div>
